--- a/definitions/verify.yml
+++ b/definitions/verify.yml
@@ -31,9 +31,9 @@ security:
   - apiKey: []
 paths:
   "/{format}":
-    get:
+    post:
       operationId: verifyRequest
-      summary: Verify Request
+      summary: Request a Verification
       description: >-
         Use Verify request to generate and send a PIN to your user:
 
@@ -49,161 +49,149 @@ paths:
 
       parameters:
         - $ref: "#/components/parameters/format"
-        - $ref: "#/components/parameters/api_secret"
-        - name: number
-          required: true
-          in: query
-          description: >-
-            The mobile or landline phone number to verify. Unless you are
-            setting `country` explicitly, this number must be in
-            [E.164](https://en.wikipedia.org/wiki/E.164) format.
-          schema:
-            type: string
-          example: "447700900000"
-        - name: country
-          required: false
-          in: query
-          description: >-
-            If you do not provide `number` in international format or you are not
-            sure if `number` is correctly formatted, specify the two-character country
-            code in `country`. Verify will then format the number for you.
-          schema:
-            type: string
-          example: GB
-        - name: brand
-          required: true
-          in: query
-          description: >-
-            An 18-character alphanumeric string you can use to personalize the verification
-            request SMS body, to help users identify your company or application name.
-            For example: "Your `Acme Inc` PIN is ..."
-          schema:
-            type: string
-            maxLength: 18
-          example: Acme Inc
-        - name: sender_id
-          required: false
-          in: query
-          description: >-
-            An 11-character alphanumeric string that represents the [identity of the sender](https://developer.nexmo.com/messaging/sms/guides/custom-sender-id)
-            of the verification request. Depending on the destination of the phone number you are sending the verification SMS to,
-            restrictions might apply.
-          schema:
-            type: string
-            maxLength: 11
-            default: VERIFY
-          example: ACME
-        - name: code_length
-          required: false
-          in: query
-          description: The length of the verification code.
-          schema:
-            type: integer
-            enum:
-              - 4
-              - 6
-            default: 4
-          example: 6
-        - name: lg
-          required: false
-          in: query
-          description: >-
-            By default, the SMS or text-to-speech (TTS) message is generated in
-            the locale that matches the `number`. For example, the text message
-            or TTS message for a `33*` number is sent in French. Use this
-            parameter to explicitly control the language used for the Verify
-            request. A list of languages is available: <https://developer.nexmo.com/verify/guides/verify-languages>
-          example: en-us
-          schema:
-            type: string
-            default: en-us
-            enum:
-              - ar-xa
-              - cs-cz
-              - cy-cy
-              - cy-gb
-              - da-dk
-              - de-de
-              - el-gr
-              - en-au
-              - en-gb
-              - en-in
-              - en-us
-              - es-es
-              - es-mx
-              - es-us
-              - fi-fi
-              - fil-ph
-              - fr-ca
-              - fr-fr
-              - hi-in
-              - hu-hu
-              - id-id
-              - is-is
-              - it-it
-              - ja-jp
-              - ko-kr
-              - nb-no
-              - nl-nl
-              - pl-pl
-              - pt-br
-              - pt-pt
-              - ro-ro
-              - ru-ru
-              - sv-se
-              - tr-tr
-              - vi-vn
-              - zh-cn
-              - zh-tw
-        - name: pin_expiry
-          required: false
-          in: query
-          description: >-
-            How long the generated verification code is valid for, in seconds.
-            When you specify both `pin_expiry` and `next_event_wait` then
-            `pin_expiry` must be an integer multiple of `next_event_wait`
-            otherwise `pin_expiry` is defaulted to equal next_event_wait. See
-            [changing the event
-            timings](https://developer.nexmo.com/verify/guides/changing-default-timings).
-          schema:
-            type: integer
-            minimum: 60
-            maximum: 3600
-            default: 300
-          example: 240
-        - name: next_event_wait
-          required: false
-          in: query
-          description: >-
-            Specifies the wait time in seconds between attempts to deliver the
-            verification code.
-          schema:
-            type: integer
-            minimum: 60
-            maximum: 900
-            default: 300
-          example: 120
-        - name: workflow_id
-          required: false
-          in: query
-          description: >-
-            Selects the predefined sequence of SMS and TTS (Text To Speech)
-            actions to use in order to convey the PIN to your user. For example,
-            an id of 1 identifies the workflow SMS - TTS - TTS. For a list of
-            all workflows and their associated ids, please visit the [developer
-            portal](https://developer.nexmo.com/verify/guides/workflows-and-events).
-          schema:
-            type: integer
-            default: 1
-            enum:
-              - 1
-              - 2
-              - 3
-              - 4
-              - 5
-              - 6
-              - 7
-          example: 4
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              required:
+                - api_secret
+                - number
+                - brand
+              properties:
+                api_secret:
+                  type: string
+                  description: >-
+                    You can find your API secret in your Nexmo account [developer
+                    dashboard](https://dashboard.nexmo.com)
+                number:
+                  type: string
+                  description: >-
+                    The mobile or landline phone number to verify. Unless you are
+                    setting `country` explicitly, this number must be in
+                    [E.164](https://en.wikipedia.org/wiki/E.164) format.
+                  example: "447700900000"
+                country:
+                  description: >-
+                    If you do not provide `number` in international format or you are not
+                    sure if `number` is correctly formatted, specify the two-character country
+                    code in `country`. Verify will then format the number for you.
+                  type: string
+                  example: GB
+                brand:
+                  description: >-
+                    An 18-character alphanumeric string you can use to personalize the verification
+                    request SMS body, to help users identify your company or application name.
+                    For example: "Your `Acme Inc` PIN is ..."
+                  type: string
+                  maxLength: 18
+                  example: Acme Inc
+                sender_id:
+                  description: >-
+                    An 11-character alphanumeric string that represents the [identity of the sender](https://developer.nexmo.com/messaging/sms/guides/custom-sender-id)
+                    of the verification request. Depending on the destination of the phone number you are sending the verification SMS to,
+                    restrictions might apply.
+                  type: string
+                  maxLength: 11
+                  default: VERIFY
+                  example: ACME
+                code_length:
+                  description: The length of the verification code.
+                  type: integer
+                  enum:
+                    - 4
+                    - 6
+                  default: 4
+                  example: 6
+                lg:
+                  description: >-
+                    By default, the SMS or text-to-speech (TTS) message is generated in
+                    the locale that matches the `number`. For example, the text message
+                    or TTS message for a `33*` number is sent in French. Use this
+                    parameter to explicitly control the language used for the Verify
+                    request. A list of languages is available: <https://developer.nexmo.com/verify/guides/verify-languages>
+                  example: en-us
+                  type: string
+                  default: en-us
+                  enum:
+                    - ar-xa
+                    - cs-cz
+                    - cy-cy
+                    - cy-gb
+                    - da-dk
+                    - de-de
+                    - el-gr
+                    - en-au
+                    - en-gb
+                    - en-in
+                    - en-us
+                    - es-es
+                    - es-mx
+                    - es-us
+                    - fi-fi
+                    - fil-ph
+                    - fr-ca
+                    - fr-fr
+                    - hi-in
+                    - hu-hu
+                    - id-id
+                    - is-is
+                    - it-it
+                    - ja-jp
+                    - ko-kr
+                    - nb-no
+                    - nl-nl
+                    - pl-pl
+                    - pt-br
+                    - pt-pt
+                    - ro-ro
+                    - ru-ru
+                    - sv-se
+                    - tr-tr
+                    - vi-vn
+                    - zh-cn
+                    - zh-tw
+                pin_expiry:
+                  description: >-
+                    How long the generated verification code is valid for, in seconds.
+                    When you specify both `pin_expiry` and `next_event_wait` then
+                    `pin_expiry` must be an integer multiple of `next_event_wait`
+                    otherwise `pin_expiry` is defaulted to equal next_event_wait. See
+                    [changing the event
+                    timings](https://developer.nexmo.com/verify/guides/changing-default-timings).
+                  type: integer
+                  minimum: 60
+                  maximum: 3600
+                  default: 300
+                  example: 240
+                next_event_wait:
+                  description: >-
+                    Specifies the wait time in seconds between attempts to deliver the
+                    verification code.
+                  type: integer
+                  minimum: 60
+                  maximum: 900
+                  default: 300
+                  example: 120
+                workflow_id:
+                  description: >-
+                    Selects the predefined sequence of SMS and TTS (Text To Speech)
+                    actions to use in order to convey the PIN to your user. For example,
+                    an id of 1 identifies the workflow SMS - TTS - TTS. For a list of
+                    all workflows and their associated ids, please visit the [developer
+                    portal](https://developer.nexmo.com/verify/guides/workflows-and-events).
+                  type: integer
+                  default: 1
+                  enum:
+                    - 1
+                    - 2
+                    - 3
+                    - 4
+                    - 5
+                    - 6
+                    - 7
+                  example: 4
       responses:
         "200":
           description: OK
@@ -294,7 +282,7 @@ paths:
                   - $ref: "#/components/schemas/requestErrorResponse"
 
   "/check/{format}":
-    get:
+    post:
       description: >-
         Use Verify check to confirm that the PIN you received from your user matches the one sent by
         Nexmo in your Verify request.
@@ -307,34 +295,40 @@ paths:
       summary: Verify Check
       parameters:
         - $ref: "#/components/parameters/format"
-        - $ref: "#/components/parameters/api_secret"
-        - name: request_id
-          required: true
-          in: query
-          description: >-
-            The Verify request to check. This is the
-            `request_id` you received in the response to the Verify request.
-          schema:
-            type: string
-            maxLength: 32
-          example: abcdef0123456789abcdef0123456789
-        - name: code
-          required: true
-          in: query
-          description: The verification code entered by your user.
-          schema:
-            type: string
-            minLength: 4
-            maxLength: 6
-          example: "1234"
-        - name: ip_address
-          required: false
-          in: query
-          description: >-
-            (This field is no longer used)
-          schema:
-            type: string
-          example: 123.0.0.255
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              required:
+                - api_secret
+                - request_id
+                - code
+              properties:
+                api_secret:
+                  type: string
+                  description: >-
+                    You can find your API secret in your Nexmo account [developer
+                    dashboard](https://dashboard.nexmo.com)
+                request_id:
+                  description: >-
+                    The Verify request to check. This is the
+                    `request_id` you received in the response to the Verify request.
+                  type: string
+                  maxLength: 32
+                  example: abcdef0123456789abcdef0123456789
+                code:
+                  description: The verification code entered by your user.
+                  type: string
+                  minLength: 4
+                  maxLength: 6
+                  example: "1234"
+                ip_address:
+                  description: >-
+                    (This field is no longer used)
+                  type: string
+                  example: 123.0.0.255
       responses:
         "200":
           description: OK
@@ -517,8 +511,9 @@ paths:
                 oneOf:
                   - $ref: "#/components/schemas/searchResponse"
                   - $ref: "#/components/schemas/searchErrorResponse"
+
   "/control/{format}":
-    get:
+    post:
       description: |-
         Control the progress of your Verify requests. To cancel an existing Verify request, or to trigger the next verification event:
 
@@ -530,35 +525,40 @@ paths:
       summary: Verify Control
       parameters:
         - $ref: "#/components/parameters/format"
-        - $ref: "#/components/parameters/api_secret"
-        - name: request_id
-          required: true
-          in: query
-          description: "The `request_id` you received in the response to the Verify request."
-          schema:
-            type: string
-          example: abcdef0123456789abcdef0123456789
-        - name: cmd
-          required: true
-          in: query
-          description: >-
-            The command to execute, depending on whether you want to cancel
-            the verification process, or advance to the next verification event.
-            Cancellation is only possible 30 seconds after the start of the
-            verification request and before the second event (either TTS or SMS)
-            has taken place.
-          schema:
-            type: string
-            enum:
-              - cancel
-              - trigger_next_event
-            x-ms-enum:
-              values:
-                - value: cancel
-                  description: stop the request
-                - value: trigger_next_event
-                  description: advance the request to the next part of the process.
-          example: cancel
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              required:
+                - api_secret
+                - request_id
+                - cmd
+              properties:
+                api_secret:
+                  type: string
+                  description: >-
+                    You can find your API secret in your Nexmo account [developer
+                    dashboard](https://dashboard.nexmo.com)
+                request_id:
+                  description: "The `request_id` you received in the response to the Verify request."
+                  type: string
+                  example: abcdef0123456789abcdef0123456789
+                cmd:
+                  description: >-
+                    The possible commands are `cancel` to request cancellation of
+                    the verification process, or `trigger_next_event` to advance 
+                    to the next verification event (if any).
+                    Cancellation is only possible 30 seconds after the start of the
+                    verification request and before the second event (either TTS or SMS)
+                    has taken place.
+                  type: string
+                  enum:
+                    - cancel
+                    - trigger_next_event
+                  example: cancel
+
       responses:
         "200":
           description: OK
